--- a/ng-app/src/app/shared/components/navbar/navbar.component.html
+++ b/ng-app/src/app/shared/components/navbar/navbar.component.html
@@ -1,1 +1,15 @@
-<p>navbar works!</p>
+<div
+  class="container"
+  fxLayout="row"
+  fxLayoutWrap
+  fxLayoutGap="2%"
+  fxLayoutAlign="center"
+>
+  <div id="left-nav" fxFlex="30%">
+    <a [routerLink]="'/latest'">latest</a>
+  </div>
+  <div id="center-nav" fxFlex="32%" fxFlexAlign="center">
+    <a [routerLink]="'/'">Slant Factory</a>
+  </div>
+  <div id="right-nav" fxFlex="30%%"></div>
+</div>
