--- a/ng-app/src/app/shared/components/navbar/navbar.component.scss
+++ b/ng-app/src/app/shared/components/navbar/navbar.component.scss
@@ -1,13 +1,19 @@
 #left-nav {
-  background-color: blue;
+  padding-left: 5px;
 }
 
 #center-nav {
   text-align: center;
-  background-color: red;
+  font-family: nearly-dignified;
+  font-size: 25px;
 }
 
 #right-nav {
   text-align: right;
-  background-color: green;
+  padding-right: 5px;
+}
+
+#navbar {
+  min-height: 60px;
+  box-shadow: 0 8px 6px -6px #888888;
 }
