--- a/ng-app/src/app/shared/components/navbar/navbar.component.html
+++ b/ng-app/src/app/shared/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
 >
   <div id="left-nav" fxFlex="30%"></div>
   <div id="center-nav" fxFlex="32%" fxFlexAlign="center">
-    <h3 [routerLink]="'/'">Slant Factory</h3>
+    <a id="main-icon" routerLink="/" routerLinkActive="active">Slant Factory</a>
   </div>
   <div id="right-nav" fxFlex="30%%"></div>
 </div>
