--- a/ng-app/src/app/shared/components/navbar/navbar.component.scss
+++ b/ng-app/src/app/shared/components/navbar/navbar.component.scss
@@ -1,19 +1,16 @@
-#left-nav {
-  padding-left: 5px;
-}
-
 #center-nav {
   text-align: center;
-  font-family: nearly-dignified;
-  font-size: 25px;
 }
 
-#right-nav {
-  text-align: right;
-  padding-right: 5px;
+#main-icon {
+  color: black;
+  font-family: vollkorn-semibold-italic;
+  font-size: 30px;
+  letter-spacing: 0.1em;
+  text-decoration-line: none;
+  text-decoration-line: none;
 }
 
 #navbar {
   min-height: 60px;
-  box-shadow: 0 8px 6px -6px #888888;
 }
