--- a/ng-app/src/app/shared/components/navbar/navbar.component.html
+++ b/ng-app/src/app/shared/components/navbar/navbar.component.html
@@ -1,14 +1,14 @@
 <div
   id="navbar"
   class="container"
-  fxLayout="row"
+  fxLayout
   fxLayoutWrap
   fxLayoutGap="2%"
   fxLayoutAlign="center"
 >
-  <div id="left-nav" fxFlex="30%"></div>
-  <div id="center-nav" fxFlex="32%" fxFlexAlign="center">
+  <div id="left-nav" fxFlex="30%" fxFlex.xs="15%"></div>
+  <div id="center-nav" fxFlex="32%" fxFlex.xs="66%" fxFlexAlign="center">
     <a id="main-icon" routerLink="/" routerLinkActive="active">Slant Factory</a>
   </div>
-  <div id="right-nav" fxFlex="30%%"></div>
+  <div id="right-nav" fxFlex="30%" fxFlex.xs="15%"></div>
 </div>
