--- a/ng-app/src/app/shared/components/navbar/navbar.component.scss
+++ b/ng-app/src/app/shared/components/navbar/navbar.component.scss
@@ -14,3 +14,10 @@
 #navbar {
   min-height: 60px;
 }
+
+@media only screen and (max-width: 700px) {
+  #main-icon {
+    font-size: 20px;
+    letter-spacing: normal;
+  }
+}
